# wind_dash_app

./: .gitignore  App.py  README.md  app_graph_functions.py  app_helper_functions.py  app_sandbox.py  dmi_data.py  get_forecast_data.py  process_data.py  pyproject.toml  requirements.txt  style.css
.github/workflows/: ci_python_tests.yml  python-package.yml  python_tests_and_linter.yml
assets/: DKN_10KM_epsg4326_filtered_UTF8.geojson  DKN_10KM_epsg4326_filtered_wCent.geojson  bootstrap_morph.css  style.css  style.txt
assets/Shapefiles/: DKN_10KM_epsg4326_filtered.dbf  DKN_10KM_epsg4326_filtered.geojson  DKN_10KM_epsg4326_filtered.shp  DKN_10KM_epsg4326_filtered.shx  DKN_10KM_euref89.geojson  DKN_10km_euref89.avl  DKN_10km_euref89.dbf  DKN_10km_euref89.prj  DKN_10km_euref89.shp  DKN_10km_euref89.shx  DKN_1km_euref89.avl  DKN_1km_euref89.shx
src/: app.py  app_graph_functions.py
src/data_processing/: dmi.py  get_forecast_data.py
src/helper_functions/: app_graph_functions.py  app_helper_functions.py
src/wind_dashapp/: app.py  dash_playground.py  functions.py  run_functions.py  run_import.py
src/wind_dashapp/assets/: bootstrap_morph.css
src/wind_dashapp/data_processing/: dmi.py  get_forecast_data.py  unzip_observational_data_and_write_to_csv.py
src/wind_dashapp/helper_functions/: app_graph_functions.py  app_helper_functions.py  functions.py  test_import.py
src/wind_dashapp/mock_data/: dmi_wind_forecast_data_mock3.json  dmi_wind_forecasts_data_mock2.json  dmi_wind_obs_data_mock1.json  dmi_wind_obs_data_mock2.json  dmi_wind_obs_data_mock3.json  dmi_wind_obs_data_mock4.json  dmi_wind_obs_data_mock5.json  dmi_wind_obs_data_mock6.json
tests/: test_app_helper_functions.py  test_database_connection.py  test_dmi_api.py  test_new_tests.py
