[tool.poetry]
name = "wind-dash-app"
version = "0.1.0"
description = "An application to check surf weather"
authors = ["Martin Hallberg <martin.hallberg@normative.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.24.1"
pandas = "^2.2.3"
requests = "^2.32.3"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
python-dotenv = "^1.0.1"
dash-bootstrap-templates = "^1.3.0"
dash-mantine-components = "0.12.1"
dash-daq = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
