[tool.poetry]
name = "wind-dash-app"
version = "0.1.0"
description = "An application to check surf weather"
authors = ["Martin Hallberg <martin.hallberg@normative.io>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.24.1"
pandas = "^2.2.3"
requests = "^2.32.3"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
python-dotenv = "^1.0.1"
dash-bootstrap-templates = "^1.3.0"
dash-mantine-components = "0.12.1"
dash-daq = "^0.5.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"

[tool.ruff]
line-length = 120
lint.select = ["E", "F"]  # E: pycodestyle errors, F: pyflakes
lint.ignore = []
exclude = ["migrations", ".venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
