[tool.poetry]
name = "wind-dash-app"
version = "0.1.0"
description = "An application to check surf weather"
authors = ["Martin Hallberg <martin.hallberg@normative.io>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.9"
plotly = "6.2.0"
pandas = "^2.2.3"
requests = "^2.32.3"
dash = "3.1.1"
dash-bootstrap-components = "2.0.3"
python-dotenv = "^1.0.1"
dash-bootstrap-templates = "2.1.0"
dash-mantine-components = "2.1.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.4.1"
dash-iconify = "^0.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"

[tool.ruff]
line-length = 120
lint.select = ["E", "F"]  # E: pycodestyle errors, F: pyflakes
lint.ignore = []
exclude = ["migrations", ".venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
